--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Abonos $3,563,723\n",
-      "Total Cargos $585,545\n"
+      "Hoja creada o sobrescrita con éxito: Jul 2023\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
+    "import gspread\n",
+    "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "\n",
+    "def clear_console():\n",
+    "    # Función para borrar la consola\n",
+    "    os.system('cls' if os.name == 'nt' else 'clear')\n",
     "\n",
     "def filter_dataframe(df):\n",
     "    # Eliminar las primeras 23 filas\n",
@@ -50,19 +56,20 @@
     "def seleccionar_filas(df):\n",
     "    filas_seleccionadas = []\n",
     "    columnas = df.columns\n",
-    "    \n",
     "    for index, row in df.iterrows():\n",
     "        fecha = row[columnas[0]]\n",
     "        monto = row[columnas[3]]\n",
     "        descripcion = row[columnas[1]]\n",
+    "        # Borrar la consola antes de mostrar cada fila\n",
+    "        clear_console()\n",
+    "        print(\"¿Incluir?:\\n\")\n",
+    "        incluir = input(f\"{fecha} ${monto:,} {descripcion}\\n\")\n",
     "\n",
-    "        incluir = input(f\"¿Incluir?: {fecha} ${monto:,} {descripcion}\")\n",
-    "        \n",
-    "        if incluir.lower() == 's':\n",
+    "        if incluir == '':\n",
     "            filas_seleccionadas.append(row)\n",
-    "    \n",
+    "\n",
     "    df_seleccionado = pd.DataFrame(filas_seleccionadas)\n",
-    "    \n",
+    "\n",
     "    return df_seleccionado\n",
     "\n",
     "# Leer el archivo de Excel en un DataFrame\n",
@@ -72,21 +79,65 @@
     "df_abonos, df_cargos = filter_dataframe(df)\n",
     "\n",
     "# Seleccionar filas para los abonos\n",
-    "df_abonos_seleccionados = seleccionar_filas(df_abonos)\n",
+    "#df_abonos_seleccionados = seleccionar_filas(df_abonos)\n",
     "\n",
     "# Seleccionar filas para los cargos\n",
-    "df_cargos_seleccionados = seleccionar_filas(df_cargos)\n",
+    "#df_cargos_seleccionados = seleccionar_filas(df_cargos)\n",
     "\n",
     "# Calcular la suma de los montos seleccionados en los abonos y cargos\n",
-    "total_abonos = df_abonos_seleccionados.iloc[:, 3].sum()\n",
-    "total_cargos = df_cargos_seleccionados.iloc[:, 3].sum()\n",
+    "#total_abonos = df_abonos_seleccionados.iloc[:, 3].sum()\n",
+    "#total_cargos = df_cargos_seleccionados.iloc[:, 3].sum()\n",
     "\n",
     "# Imprimir los totales en pesos chilenos\n",
-    "print(f\"Total Abonos ${total_abonos:,}\")\n",
-    "print(f\"Total Cargos ${total_cargos:,}\")\n",
+    "#print(f\"Total Abonos ${total_abonos:,.2f} CLP\")\n",
+    "#print(f\"Total Cargos ${total_cargos:,.2f} CLP\")\n",
     "\n",
+    "# Autorizar acceso a Google Sheets\n",
+    "scope = ['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive']\n",
+    "credentials = ServiceAccountCredentials.from_json_keyfile_name('credentials.json', scope)\n",
+    "gc = gspread.authorize(credentials)\n",
     "\n",
-    "\n"
+    "# Abrir la hoja de cálculo existente\n",
+    "spreadsheet = gc.open(\"cuentas claras\")\n",
+    "\n",
+    "hoja_titulo = \"Jul 2023\"\n",
+    "\n",
+    "# Verificar si la hoja ya existe\n",
+    "try:\n",
+    "    worksheet = spreadsheet.worksheet(hoja_titulo)\n",
+    "except gspread.exceptions.WorksheetNotFound:\n",
+    "    # La hoja no existe, crear una nueva\n",
+    "    worksheet = spreadsheet.add_worksheet(title=hoja_titulo, rows='100', cols='20')\n",
+    "else:\n",
+    "    # La hoja ya existe, borrar su contenido\n",
+    "    worksheet.clear()\n",
+    "\n",
+    "df_cargos = df_cargos.iloc[:, [0, 1, 3]]\n",
+    "data = [df_cargos.columns.values.tolist()] + df_cargos.values.tolist()\n",
+    "\n",
+    "# Insertar los datos en la hoja\n",
+    "worksheet.update([df_cargos.columns.values.tolist()] + df_cargos.values.tolist())\n",
+    "\n",
+    "# Obtener la letra de la columna correspondiente a la columna 3\n",
+    "letra_columna = chr(ord('A') + 2)  # La columna 3 es la columna 'C'\n",
+    "\n",
+    "ultima_fila = len(worksheet.col_values(1))\n",
+    "# Crear la fórmula de suma para la columna 3\n",
+    "formula_suma = f'=SUM({letra_columna}2:{letra_columna}{ultima_fila})'\n",
+    "\n",
+    "# Insertar una nueva fila al comienzo de la hoja\n",
+    "worksheet.insert_row([''], 1)\n",
+    "\n",
+    "# Obtener la celda en la primera columna de la nueva fila\n",
+    "celda_formula = worksheet.cell(1, 3)\n",
+    "\n",
+    "# Actualizar el valor de la celda con la fórmula de suma\n",
+    "celda_formula.value = formula_suma\n",
+    "\n",
+    "# Guardar los cambios en la hoja de cálculo\n",
+    "worksheet.update_cell(1, 3, celda_formula.value)\n",
+    "\n",
+    "print('Hoja creada o sobrescrita con éxito:', worksheet.title)\n"
    ]
   }
  ],
