add gsheet update data

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hoja creada o sobrescrita con éxito: Jul 2023\n"
+      "Hoja creada o sobrescrita con éxito: May 1900 bot\n"
      ]
     }
    ],
@@ -18,14 +18,16 @@
     "import os\n",
     "import gspread\n",
     "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "from datetime import datetime\n",
+    "import locale\n",
     "\n",
     "def clear_console():\n",
     "    # Función para borrar la consola\n",
     "    os.system('cls' if os.name == 'nt' else 'clear')\n",
     "\n",
-    "def filter_dataframe(df):\n",
+    "def filter_dataframe(df, llaves):\n",
     "    # Eliminar las primeras 23 filas\n",
-    "    df = df.drop(df.index[:23])\n",
+    "    df = df.iloc[23:]\n",
     "\n",
     "    # Eliminar la primera y última columna\n",
     "    df = df.iloc[:, 1:-1]\n",
@@ -34,10 +36,13 @@
     "    df.columns = df.iloc[0]\n",
     "\n",
     "    # Eliminar la primera fila, ya que ahora son los nombres de columna\n",
-    "    df = df[1:]\n",
+    "    df = df.iloc[1:]\n",
     "\n",
     "    # Filtrar filas con valores no nulos en la columna 'Canal o Sucursal'\n",
     "    df_filtrado = df.dropna(subset=['Canal o Sucursal'])\n",
+    "\n",
+    "    # Filtrar filas que contengan las llaves especificadas\n",
+    "    df_filtrado = df_filtrado[~df_filtrado['Descripción'].isin(llaves)]\n",
     "\n",
     "    # Filtrar filas con valores nulos en la columna 'Cargos (PESOS)' para obtener los abonos\n",
     "    df_abonos = df_filtrado[df_filtrado['Cargos (PESOS)'].isna()]\n",
@@ -52,6 +57,7 @@
     "    df_cargos = df_cargos.drop(\"Abonos (PESOS)\", axis=1)\n",
     "\n",
     "    return df_abonos, df_cargos\n",
+    "\n",
     "\n",
     "def seleccionar_filas(df):\n",
     "    filas_seleccionadas = []\n",
@@ -72,72 +78,88 @@
     "\n",
     "    return df_seleccionado\n",
     "\n",
-    "# Leer el archivo de Excel en un DataFrame\n",
-    "df = pd.read_excel('cartola.xls')\n",
+    "def main():\n",
+    "    # Leer el archivo de Excel en un DataFrame\n",
+    "    df = pd.read_excel('cartola.xls')\n",
     "\n",
-    "# Filtrar el DataFrame y obtener los DataFrames de abonos y cargos\n",
-    "df_abonos, df_cargos = filter_dataframe(df)\n",
+    "    # Leer el archivo \"llaves.txt\" y obtener las llaves\n",
+    "    with open('llaves.txt', 'r') as file:\n",
+    "        llaves = [line.strip() for line in file]\n",
     "\n",
-    "# Seleccionar filas para los abonos\n",
-    "#df_abonos_seleccionados = seleccionar_filas(df_abonos)\n",
+    "    # Filtrar el DataFrame y obtener los DataFrames de abonos y cargos\n",
+    "    df_abonos, df_cargos = filter_dataframe(df, llaves)\n",
     "\n",
-    "# Seleccionar filas para los cargos\n",
-    "#df_cargos_seleccionados = seleccionar_filas(df_cargos)\n",
+    "    # Crear una máscara booleana para las filas que contienen las llaves\n",
+    "    mask = df_cargos.iloc[:, 1].str.contains(\"|\".join(llaves))\n",
     "\n",
-    "# Calcular la suma de los montos seleccionados en los abonos y cargos\n",
-    "#total_abonos = df_abonos_seleccionados.iloc[:, 3].sum()\n",
-    "#total_cargos = df_cargos_seleccionados.iloc[:, 3].sum()\n",
+    "    # Filtrar el DataFrame para obtener las filas no removidas\n",
+    "    df_cargos = df_cargos[~mask]\n",
     "\n",
-    "# Imprimir los totales en pesos chilenos\n",
-    "#print(f\"Total Abonos ${total_abonos:,.2f} CLP\")\n",
-    "#print(f\"Total Cargos ${total_cargos:,.2f} CLP\")\n",
+    "    # Seleccionar filas para los abonos\n",
+    "    #df_abonos_seleccionados = seleccionar_filas(df_abonos)\n",
     "\n",
-    "# Autorizar acceso a Google Sheets\n",
-    "scope = ['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive']\n",
-    "credentials = ServiceAccountCredentials.from_json_keyfile_name('credentials.json', scope)\n",
-    "gc = gspread.authorize(credentials)\n",
+    "    # Seleccionar filas para los cargos\n",
+    "    #df_cargos_seleccionados = seleccionar_filas(df_cargos)\n",
     "\n",
-    "# Abrir la hoja de cálculo existente\n",
-    "spreadsheet = gc.open(\"cuentas claras\")\n",
+    "    # Autorizar acceso a Google Sheets\n",
+    "    scope = ['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive']\n",
+    "    credentials = ServiceAccountCredentials.from_json_keyfile_name('credentials.json', scope)\n",
+    "    gc = gspread.authorize(credentials)\n",
     "\n",
-    "hoja_titulo = \"Jul 2023\"\n",
+    "    # Abrir la hoja de cálculo existente\n",
+    "    spreadsheet = gc.open(\"cuentas claras\")\n",
     "\n",
-    "# Verificar si la hoja ya existe\n",
-    "try:\n",
-    "    worksheet = spreadsheet.worksheet(hoja_titulo)\n",
-    "except gspread.exceptions.WorksheetNotFound:\n",
-    "    # La hoja no existe, crear una nueva\n",
-    "    worksheet = spreadsheet.add_worksheet(title=hoja_titulo, rows='100', cols='20')\n",
-    "else:\n",
-    "    # La hoja ya existe, borrar su contenido\n",
-    "    worksheet.clear()\n",
+    "    # Establecer el idioma en español\n",
+    "    locale.setlocale(locale.LC_TIME, 'es_ES')\n",
     "\n",
-    "df_cargos = df_cargos.iloc[:, [0, 1, 3]]\n",
-    "data = [df_cargos.columns.values.tolist()] + df_cargos.values.tolist()\n",
+    "    # Obtener la fecha del primer dato del DataFrame\n",
+    "    fecha_primer_dato_str = df_cargos.iloc[0][0]\n",
     "\n",
-    "# Insertar los datos en la hoja\n",
-    "worksheet.update([df_cargos.columns.values.tolist()] + df_cargos.values.tolist())\n",
+    "    # Convertir la fecha a formato datetime\n",
+    "    fecha_primer_dato = datetime.strptime(fecha_primer_dato_str, \"%d/%m\")\n",
     "\n",
-    "# Obtener la letra de la columna correspondiente a la columna 3\n",
-    "letra_columna = chr(ord('A') + 2)  # La columna 3 es la columna 'C'\n",
+    "    # Crear el nombre de la hoja utilizando el formato deseado (por ejemplo, \"Mes Año\")\n",
+    "    hoja_titulo = fecha_primer_dato.strftime(\"%b 2023\").capitalize() + \" bot\"\n",
     "\n",
-    "ultima_fila = len(worksheet.col_values(1))\n",
-    "# Crear la fórmula de suma para la columna 3\n",
-    "formula_suma = f'=SUM({letra_columna}2:{letra_columna}{ultima_fila})'\n",
+    "    # Verificar si la hoja ya existe\n",
+    "    try:\n",
+    "        worksheet = spreadsheet.worksheet(hoja_titulo)\n",
+    "    except gspread.exceptions.WorksheetNotFound:\n",
+    "        # La hoja no existe, crear una nueva\n",
+    "        worksheet = spreadsheet.add_worksheet(title=hoja_titulo, rows='100', cols='20')\n",
+    "    else:\n",
+    "        # La hoja ya existe, borrar su contenido\n",
+    "        worksheet.clear()\n",
     "\n",
-    "# Insertar una nueva fila al comienzo de la hoja\n",
-    "worksheet.insert_row([''], 1)\n",
+    "    df_cargos = df_cargos.iloc[:, [0, 1, 3]]\n",
+    "    data = [df_cargos.columns.values.tolist()] + df_cargos.values.tolist()\n",
     "\n",
-    "# Obtener la celda en la primera columna de la nueva fila\n",
-    "celda_formula = worksheet.cell(1, 3)\n",
+    "    # Insertar los datos en la hoja\n",
+    "    worksheet.update([df_cargos.columns.values.tolist()] + df_cargos.values.tolist())\n",
     "\n",
-    "# Actualizar el valor de la celda con la fórmula de suma\n",
-    "celda_formula.value = formula_suma\n",
+    "    # Obtener la letra de la columna correspondiente a la columna 3\n",
+    "    letra_columna = chr(ord('A') + 2)  # La columna 3 es la columna 'C'\n",
     "\n",
-    "# Guardar los cambios en la hoja de cálculo\n",
-    "worksheet.update_cell(1, 3, celda_formula.value)\n",
+    "    ultima_fila = len(worksheet.col_values(1))\n",
+    "    # Crear la fórmula de suma para la columna 3\n",
+    "    formula_suma = f'=SUM({letra_columna}2:{letra_columna}{ultima_fila})'\n",
     "\n",
-    "print('Hoja creada o sobrescrita con éxito:', worksheet.title)\n"
+    "    # Insertar una nueva fila al comienzo de la hoja\n",
+    "    worksheet.insert_row([''], 1)\n",
+    "\n",
+    "    # Obtener la celda en la primera columna de la nueva fila\n",
+    "    celda_formula = worksheet.cell(1, 3)\n",
+    "\n",
+    "    # Actualizar el valor de la celda con la fórmula de suma\n",
+    "    celda_formula.value = formula_suma\n",
+    "\n",
+    "    # Guardar los cambios en la hoja de cálculo\n",
+    "    worksheet.update_cell(1, 3, celda_formula.value)\n",
+    "\n",
+    "    print('Hoja creada o sobrescrita con éxito:', worksheet.title)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
